# python-info

./: bash.exe.stackdump
mcs01_01/: pyproject.toml
mcs01_01/Development/: log01.py  log02.py  readme.md  type_01.py
mcs01_01/Patterns/Behavioral/Command/: example_01.py
mcs01_01/Patterns/Behavioral/Observer/: logs.txt
mcs01_01/Patterns/Structural/Bridge/: example.py
mcs01_01/Patterns/Structural/Decorator/: example02.py
mcs01_01/Patterns/Structural/Proxy/: proxy.py
mcs01_01/Solid/: aggregation.py  composition.py  readme.md
mcs01_01/Solid/I/: end_01.py  start_01.py
mcs01_01/Solid/O/example/: storage.py
mcs01_01/test_project/: pyproject.toml
mcs01_02/app_with_mongodb/: Dockerfile  docker-compose.yaml  main.py
mcs01_02/single_app/: Dockerfile  main.py  pyproject.toml
mcs01_03/: db.json  index.html  main.py  pyproject.toml
mcs01_03/templates/: blog.jinja
mcs01_04/: 02_gather.py  03_create_task.py  04_forever.py  05_future_task.py  08_get_http.py  10_queue.py  11_wait.py  13_client.py  pyproject.toml  timing.py
mcs01_04/chat/: server.py
mcs01_04/file/: main.py
mcs01_04/task_runner/: main.js  main.py
mcs01_05/: 01_orm_core_01.py  02_orm_core_02.py  03_orm_core_03.py  04_orm_core_04.py  05_orm_relationship.py  06_orm_session.py  07_orm_async.py  08_orm_execute.py  09_lazy_loading.py  10_eager_loading.py  11_async_eager_loading_example.py  async_eager.db  lazy_loading.db  modern_sqlalchemy.db  pyproject.toml  school.db  session_example.db
mcs01_06/: main.py  pyproject.toml  seed.py
mcs01_06/conf/: db.py
mcs01_07/: pyproject.toml
(+3 files in other folders)
