[tool.poetry]
name = "mcs01-04"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^36.1.1"
requests = "^2.32.3"
aiohttp = "^3.11.13"
httpx = "^0.28.1"
aiopath = "^0.7.7"
aiofile = "^3.9.0"
aioshutil = "^1.5"
websockets = "^15.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
